# UniSync

./: .env  .env.acceptance  .env.common  .env.demo  .env.example  .env.local.example  .env.local.mine  .gitattributes  .gitignore  AGENTS.md  AWS.md  CLAUDE.md  E2E_IMPLEMENTATION_TODO.md  GOOGLE_CALENDAR_INTEGRATION_PLAN.md  LICENSE  README.md  TODO.md  docker-compose-app.yml  docker-compose.acceptance.yml  docker-compose.app.yml  docker-compose.demo.yml  docker-compose.override.yml.example  docker-compose.test.yml  docker-compose.yml  err2115  pyproject.toml  pytest.ini  roadmap.md  terrafrom.md  기획.md  설계서.md  일정_및_할일_관리_설계.md
.claude/: CLAUDE.md  settings.local.json
.claude/commands/: update-after-change.md
app/backend/: CLAUDE.md  README.md
app/serverless/: CLAUDE.md  README.md  TESTING.md  conftest.py  requirements-dev.txt
app/shared/: README.md
docs/: DEPLOYMENT.md  ECS_ISSUES.md  README.md
docs/adr/: README.md
docs/design/: api-documentation.md  sqs-architecture.md  system-architecture.md  testing-strategy.md
docs/features/: acceptance-test.md  api-endpoint-migration.md  assignment-to-schedule.md  canvas-sync.md  schedule-coordination.md  schedule-management.md  social-and-groups.md  testing-strategy.md
docs/guides/: README.md  deployment.md  development-setup.md  environment-variables.md  troubleshooting.md
docs/requirements/: product-spec.md
localstack-init/: 01-create-queues.sh  02-create-cognito.sh  03-deploy-lambdas.sh  99-mark-complete.sh
merge_fix/: MERGE_PLAN.md
mysql-init/: 01-create-databases.sql
scripts/: build-and-push-images.ps1  deploy-lambda.sh  docker-push.sh  ecr-login.ps1  init-sqs-queues.sh  run-integration-tests.sh  setup-localstack.sh  wait-for-localstack.sh
scripts/dev/: README.md  sync-local-config.py  test_canvas_api.py
scripts/infra/: deploy-lambda.sh
scripts/test/: test-all.py  test-canvas-api.py  test-e2e.bat  test-e2e.sh  test-unit.bat  test-unit.sh
system-tests/: README.md  conftest.py
system-tests/infra/: test_infrastructure.py  test_sqs_dlq.py
system-tests/scenarios/: test_category_management.py  test_friend_management.py  test_full_user_journey.py  test_group_management.py  test_sync_disable_api_flow.py  test_sync_disable_flow.py  test_todo_journey.py
terraform/: .terraform.lock.hcl  README.md  debug_response.py  main.tf  outputs.tf  smoke_test.py  terraform.tfvars.example  variables.tf
tests/: README.md  requirements.txt
tests/e2e/: conftest.py  test_canvas_sync_e2e.py  test_canvas_sync_with_jwt_e2e.py
tests/integration/: conftest.py  test_assignment_flow.py  test_assignment_flow_with_lambda.py  test_canvas_sync_integration.py  (+1 more)
(+356 files in other folders)
