# ==============================================================================
# UniSync Python Dependencies (Single Source of Truth)
# ==============================================================================
# 모든 Python 의존성은 이 파일에서 Poetry로 관리됩니다.
#
# 사용법:
#   poetry install          # 의존성 설치
#   poetry run pytest ...   # 테스트 실행
#   poetry shell            # 가상환경 진입 후 직접 실행
#
# 참고: docs/guides/development-setup.md
# ==============================================================================

[tool.poetry]
name = "unisync"
version = "0.1.0"
description = "Canvas LMS 연동 학업 일정관리 서비스"
authors = ["UniSync Team"]
readme = "README.md"
package-mode = false

# 런타임 의존성 (Lambda, 시스템 테스트에서 사용)
[tool.poetry.dependencies]
python = "^3.10"
boto3 = "^1.34.0"
requests = "^2.31.0"
mysql-connector-python = "^9.1.0"
python-dotenv = "^1.0.1"

# 개발/테스트 의존성
[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
pytest-timeout = "^2.3.1"
pytest-xdist = "^3.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
# Pytest configuration (pytest.ini 내용 통합)
testpaths = ["app/serverless", "system-tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
    "--disable-warnings",
    "-p", "no:cacheprovider"
]
markers = [
    "unit: Unit tests (fast, no external dependencies)",
    "integration: Integration tests (may require external services)",
    "slow: Slow running tests"
]
